# Conditional-RatSPN

./: .gitignore  pyproject.toml
